--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "prisma": "^6.2.1"
   },
   "dependencies": {
-    "@prisma/client": "^6.2.1"
+    "@prisma/client": "^6.2.1",
+    "body-parser": "^1.20.3",
+    "express": "^4.21.2"
   }
 }
